src/index.css
:root {
  --primary: #ffb600;
  --primary-light: #fff4d8;
  --black: #171717;
  --background-color: #f2f2f2;
  --innerbackground: #ffffff;
  --red: red;
  --toastify-icon-color-success: #ffb600;
  --color-background-primary: #ffb600 !important;
  --label: #415385;
  --input_label: #f3f3f3;
  --input_label_dark: #434343;
  --green: #50ad95;
  --active: #ffe299;
  --light_black: #474747;
  --disabled_label: #b7b7b7;
}

*::after,
*::before {
  margin: 0px;
  padding: 0px;
  box-sizing: inherit;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-size: 62.5%;
  font-family: "Helvetica 400", "Poppins", sans-serif;
}

body {
  overflow: hidden;
}

@font-face {
  font-family: "Helvetica 100";
  src: url("./assets/fonts/HelveticaNeueLTPro-100.ttf") format("truetype");
  font-weight: 100;
  font-style: normal;
}

@font-face {
  font-family: "Helvetica 200";
  src: url("./assets/fonts/HelveticaNeueLTPro-200.ttf") format("truetype");
  font-weight: 200;
  font-style: normal;
}

@font-face {
  font-family: "Helvetica 300";
  src: url("./assets/fonts/HelveticaNeueLTPro-300.ttf") format("truetype");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "Helvetica 400";
  src: url("./assets/fonts/HelveticaNeueLTPro-400.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Helvetica 500";
  src: url("./assets/fonts/HelveticaNeueLTPro-500.ttf") format("truetype");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Helvetica 700";
  src: url("./assets/fonts/HelveticaNeueLTPro-700.ttf") format("truetype");
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: "Helvetica 800";
  src: url("./assets/fonts/HelveticaNeueLTPro-800.ttf") format("truetype");
  font-weight: 800;
  font-style: normal;
}

@font-face {
  font-family: "Helvetica 900";
  src: url("./assets/fonts/HelveticaNeueLTPro-900.ttf") format("truetype");
  font-weight: 900;
  font-style: normal;
}

@media (max-width: 576px) {
  html {
    font-size: 45%;
  }
}

@media (min-width: 576px) {
  html {
    font-size: 50%;
  }
}

@media (min-width: 768px) {
  html {
    font-size: 54%;
  }
}

@media (min-width: 992px) {
  html {
    font-size: 60%;
  }
}

@media (min-width: 1200px) {
  html {
    font-size: 62.5%;
  }
}

